2004-08-22  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, src/Makefile.am: Use libpng-config to find out
	  parameters to use in CFLAGS and LIBS.

tag:SEARCH_SELECT_merged

2004-08-13 11:25 Search9-pre8
 todo 	saving projects 
	Bugs fixed:
		-if mark is pressed and there is no selection colour of layer
		 button does not change
                -use of libmba's csv.[ch]  
		-automatic screening for delimiters
		-if  dialog is to be destroyed but it does not exist is caught 
		-upon loading a second gerberfile the first user dialog is 
		  destroyed and parsed_PNP_data
		-compiles under GTK1
		-pressing mark actually also activates the new layer
		-loading a gerberfile also activates layer
		-tooltip to entry field now hints at usage of regexp
		-arrow down acts like space
		-colour change back to original colour fixed - new colour is 
                 only allocated upon first draw on an empty layer
		-dropdown list for available layers updates, whenever changes 
                 to layer occur
		-default layer now is actually also the one which is drawn ontoi
                  by default 
 		 (shown was MAXFILES-1, but it was drawn onto 0!)
                -if there was an error loading a pnpfile 
		(e.g. incompatible  csv format) select parts window is destroyed
                  also   parsed_PNP_data is  freed!
		-arrow up reverses arrow down/space 
		-right click now selects and draws the selection on screen
               	-shift_arrows will add items to selection (moving up and down!)
		-focus was always going to log window, for MINGW therefore 
		 logging in log window was disabled as a first measure
		 

2004-08-12 09:51   Search9-pre7 
program now works under MINGW
code cleanup
BUG fixes:
	-crash on lowercase entries(linux)using REG_ICASE
	-crash on entries non existing in the list (MINGW/LINUX)
use of parsed_PNP_data as a global storage place for pnp data after parsing, in case of reopen search window initiated.


2004-08-07 09:29  Search9-pre6